# gbase

./: .gitignore  CMakeLists.txt
include/gbase/: error.hpp  fs.hpp  gbase.hpp  io.hpp  net.hpp  types.hpp
include/gbase/fs/: file.hpp
include/gbase/io/: log.hpp  string.hpp
include/gbase/net/: basic_socket.hpp  basic_socket_buf.hpp  socket.hpp  socket_fwd.hpp  socket_types.hpp
src/: error.cpp  gbase.cpp
src/fs/: file.cpp
src/io/: log.cpp  string.cpp
src/net/: socket.cpp
test/: CMakeLists.txt  test_exception.cpp  test_file.cpp  test_run.cpp  test_serializable.cpp
